# screengrab

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  COPYING  Dockerfile  README  README.md  org.lxqt_project.ScreenGrab.metainfo.xml  screengrab.appdata.xml  screengrab.desktop  screengrab.desktop.in  screengrab.metainfo.xml  screengrab.rc
cmake/: FindQxt.cmake  LXQtTranslateDesktop.cmake  LXQtTranslateDesktopYaml.pl  LXQtTranslateTs.cmake  Qt6TranslationLoader.cmake  Qt6TranslationLoader.cpp.in
debian/: README.Debian  README.source  changelog  control  copyright
debian/source/: include-binaries
docs/: ChangeLog.txt  LICENSE.txt  README.txt
docs/html/en/: index.html
docs/html/pt_BR/: index.html
docs/html/ru/: index.html
localize/: screengrab_de_DE.ts  screengrab_es_ES.ts  screengrab_it_IT.ts  screengrab_pt_BR.ts  screengrab_ru.ts  screengrab_uk_UA.ts
src/: main.cpp  main.cpp~  screengrab.qrc
src/common/netwm/: netwm.cpp  netwm.h
src/common/qkeysequencewidget/: CMakeLists.txt
src/common/qkeysequencewidget/src/: qkeysequencewidget.cpp  qkeysequencewidget.h  qkeysequencewidget_p.h
src/common/singleapp/: CMakeLists.txt  singleapp.cpp  singleapp.h
src/core/: cmdline.cpp  cmdline.h  config.cpp  config.cpp~  config.h  core.cpp  core.h  dbusnotifier.cpp  dbusnotifier.h  fixx11h.h  main.cpp  modulemanager.cpp  modulemanager.h  regionselect.cpp  regionselect.h  screengrab.cpp  screengrab.cpp~  screengrab.h  screengrab.h~  shortcutmanager.cpp  shortcutmanager.h  singleapp.cpp  singleapp.h  x11utils.cpp  x11utils.h
src/core/ui/: about.cpp  about.h  aboutwidget.ui  configwidget.cpp  configwidget.h  configwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/wayland/: ScreenCopy.cpp  ScreenCopy.h  ScreenShot.cpp  ScreenShot.h
src/modules/: abstractmodule.h
src/modules/extedit/: CMakeLists.txt  extedit.cpp  extedit.h  exteditconfig.cpp  exteditconfig.h  exteditconfigwidget.cpp  exteditconfigwidget.h  exteditconfigwidget.ui  moduleextedit.cpp  moduleextedit.h
src/modules/uploader/: CMakeLists.txt  dialoguploader.cpp  dialoguploader.h  dialoguploader.ui  moduleuploader.cpp  moduleuploader.h  uploader.cpp  uploader.h  uploaderconfig.cpp  uploaderconfig.h  uploaderconfigwidget.cpp  uploaderconfigwidget.h  uploaderconfigwidget.ui  uploaderdialog.cpp  uploaderdialog.h  uploaderdialog.ui
src/modules/uploader/imgshack/: uploader_imgshack.cpp  uploader_imgshack.h  uploader_imgshack_widget.cpp  uploader_imgshack_widget.h  uploader_imgshack_widget.ui  uploaderconfigwidget_imgshack.cpp  uploaderconfigwidget_imgshack.h  uploaderconfigwidget_imgshack.ui
src/modules/uploader/imgur/: uploader_imgur.cpp  uploader_imgur.h  uploader_imgur_widget.cpp  uploader_imgur_widget.h  uploader_imgur_widget.ui  uploaderconfigwidget_imgur.cpp  uploaderconfigwidget_imgur.h  uploaderconfigwidget_imgur.ui
src/modules/uploader/mediacrush/: uploader_mediacrush.cpp  uploader_mediacrush.h  uploader_mediacrush_widget.cpp  uploader_mediacrush_widget.h  uploader_mediacrush_widget.ui  uploaderconfigwidget_mediacrush.cpp  uploaderconfigwidget_mediacrush.h  uploaderconfigwidget_mediacrush.ui
src/ui/: about.cpp  about.cpp~  about.h  about.h~  aboutwidget.ui  configwidget.cpp  configwidget.h  configwidget.ui  mainwindow.cpp  mainwindow.cpp~  mainwindow.h  mainwindow.h~  mainwindow.ui
translations/: extedit.ts  extedit_fr_FR.ts  screengrab.ts  screengrab_ar.desktop.yaml  screengrab_ar.ts  screengrab_arn.ts  screengrab_ast.ts  screengrab_bg.desktop.yaml  screengrab_bg.ts  screengrab_ca.desktop.yaml  screengrab_ca.ts  screengrab_cs.desktop.yaml  screengrab_cs.ts  screengrab_cy.ts  screengrab_da.desktop.yaml  screengrab_da.ts  screengrab_de.desktop.yaml  screengrab_de.ts  screengrab_de_DE.ts  screengrab_el.desktop.yaml  screengrab_el.ts  screengrab_en_GB.desktop.yaml  screengrab_en_GB.ts  screengrab_es.desktop.yaml  screengrab_es.ts  screengrab_es_ES.ts  screengrab_et.desktop.yaml  screengrab_et.ts  screengrab_fi.desktop.yaml  screengrab_fi.ts  screengrab_fr.desktop.yaml  screengrab_fr.ts  screengrab_fr_FR.ts  screengrab_gl.desktop.yaml  screengrab_gl.ts  screengrab_he.desktop.yaml  screengrab_he.ts  screengrab_hi.desktop.yaml  screengrab_hr.desktop.yaml  screengrab_hr.ts  (+57 more)
